PROJECT(ICTCLAS2015-STUDY)

CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

# download latest version: http://ictclas.nlpir.org/upload/
set(TOOL_ICTCLAS_TARGET_SOURCE "20150805111452_20150702124141_ICTCLAS2015%20\\(1\\).zip")
set(TOOL_ICTCLAS_SOURCE ICTCLAS2015.zip) 
set(TOOL_ICTCLAS_DIR ICTCLAS2015)
set(TOOL_ICTCLAS_LIB_DIR ${CMAKE_CURRENT_SOURCE_DIR}/${TOOL_ICTCLAS_DIR}/lib/linux64)
set(TOOL_ICTCLAS_LIB libNLPIR.so)
set(TOOL_ICTCLAS_LIB_FIND_DATA find ${CMAKE_CURRENT_SOURCE_DIR}/${TOOL_ICTCLAS_DIR} -name Data -exec cp -rf {} ${CMAKE_BINARY_DIR} \\$<SEMICOLON> )
set(TOOL_ICTCLAS_LIB_FIND_INCLUDE find ${CMAKE_CURRENT_SOURCE_DIR}/${TOOL_ICTCLAS_DIR} -name include -exec cp -rf {} ${CMAKE_BINARY_DIR} \\$<SEMICOLON> )
set(TOOL_ICTCLAS_LIB_FIND_SO find ${CMAKE_CURRENT_SOURCE_DIR}/${TOOL_ICTCLAS_DIR} -name ${TOOL_ICTCLAS_LIB} -exec cp -rf {} ${CMAKE_BINARY_DIR} \\$<SEMICOLON> )

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/${TOOL_ICTCLAS_DIR}/include ${CMAKE_BINARY_DIR}/include)
set(LIBS ${LIBS} ${CMAKE_BINARY_DIR}/${TOOL_ICTCLAS_LIB})

set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -DOS_LINUX")
set (CXXFLAGS "${CXXFLAGS} -std=c++11 -stdlib=libc++ ")

add_custom_command(
	OUTPUT GET_ICTCLAS2015
	COMMAND test -e ${CMAKE_CURRENT_SOURCE_DIR}/${TOOL_ICTCLAS_SOURCE} || time wget "http://ictclas.nlpir.org/upload/${TOOL_ICTCLAS_TARGET_SOURCE}" -O ${CMAKE_CURRENT_SOURCE_DIR}/${TOOL_ICTCLAS_SOURCE}
	COMMAND test -e ${CMAKE_CURRENT_SOURCE_DIR}/${TOOL_ICTCLAS_DIR} || unzip ${CMAKE_CURRENT_SOURCE_DIR}/${TOOL_ICTCLAS_SOURCE} -d ${CMAKE_CURRENT_SOURCE_DIR}/${TOOL_ICTCLAS_DIR}

	COMMAND test -e ${CMAKE_BINARY_DIR}/Data || ${TOOL_ICTCLAS_LIB_FIND_DATA}
	COMMAND test -e ${CMAKE_BINARY_DIR}/include || ${TOOL_ICTCLAS_LIB_FIND_INCLUDE}
	COMMAND test -e ${CMAKE_BINARY_DIR}/${TOOL_ICTCLAS_LIB} || ${TOOL_ICTCLAS_LIB_FIND_SO}
	COMMENT "GET ICTCLA2015"
)
add_custom_target(PREPARE_ICTCLAS2015 ALL DEPENDS GET_ICTCLAS2015)

add_executable(content-analysis
	main.cpp
)

target_link_libraries(content-analysis
	${LIBS}
)

add_dependencies(content-analysis PREPARE_ICTCLAS2015)
